# Hexagonal_Architecture_Kit

./: AI_PROMPT_TEMPLATE.md  CLAUDE.md  LICENSE  README.md  RULES.md  ruleset.md  ruleset_java.md  ruleset_unified.md  structure_guide.md
agents/: README.md  chicago_tdd.md  code_review.md  cqrs_review.md  hexagonal_review.md  london_tdd.md  orchestrator.md  test_review.md
agents/reviewers/: code.md  cqrs.md  ddd.md  hexagonal.md  scope_guardian.md  test.md  user_story.md
agents/writers/application/: command.md  query.md
agents/writers/domain/: aggregate.md  domain_service.md  events.md
agents/writers/infrastructure/: controller.md  external_adapter.md  migration.md  repository.md  repository_interface.md
agents/writers/planning/: architect.md  story_slicer.md  user_story.md
agents/writers/tests/: acceptance.md  contract.md  e2e.md  integration.md  unit.md
agents/writers/utilities/: dto.md  id_generator.md  time_provider.md
archive/: README.md  ruleset_csharp.md  ruleset_go.md  ruleset_python.md  ruleset_rust.md  ruleset_typescript.md
examples/: architecture_review_example.md  london_tdd_session_example.md
katacombs-api/: .env  .gitignore  Makefile  SESSION_REFACTORING_LOG.md  ToDo.md  main.py  pyproject.toml  pyrightconfig.json
katacombs-api/src/chat/: README.md
katacombs-api/src/game/: README.md
katacombs-api/src/game/application/commands/: __init__.py  start_game_command_handler.py
katacombs-api/src/game/application/queries/: __init__.py  get_all_active_players_query.py  get_player_details_query.py  player_projection_repository.py
katacombs-api/src/game/application/use_cases/: start_game.py
katacombs-api/src/game/domain/: __init__.py
katacombs-api/src/game/domain/player/: bag.py  player.py  player_repository.py  sid.py
katacombs-api/src/game/domain/world/: item.py  location.py  world.py  world_builder.py
katacombs-api/src/game/infrastructure/: sid_generator.py
katacombs-api/src/game/infrastructure/adapters/: fastapi_app.py
katacombs-api/src/game/infrastructure/repositories/: in_memory_player_projection_repository.py  in_memory_player_repository.py  in_memory_world_repository.py
katacombs-api/src/katacombs/application/dtos/: start_game_dto.py
katacombs-api/src/katacombs/application/use_cases/: start_game.py
katacombs-api/src/katacombs/domain/entities/: __init__.py  bag.py  item.py  location.py  player.py
katacombs-api/src/katacombs/domain/player/: __init__.py  player.py
katacombs-api/src/katacombs/domain/repositories/: location_repository.py  player_repository.py
katacombs-api/src/katacombs/domain/value_objects/: __init__.py  action.py  direction.py  sid.py
katacombs-api/src/katacombs/domain/world/: __init__.py  action.py  direction.py  world.py  world_repository.py
katacombs-api/src/katacombs/infrastructure/adapters/: fastapi_app.py
katacombs-api/src/katacombs/infrastructure/repositories/: in_memory_location_repository.py  in_memory_player_repository.py
katacombs-api/src/map_editor/: README.md
katacombs-api/tests/acceptance/: test_start_game.py
katacombs-api/tests/application/: __init__.py
katacombs-api/tests/application/use_cases/: test_start_game_acceptance.py
katacombs-api/tests/contract/: test_game_controller.py  test_game_controller_simple.py
katacombs-api/tests/domain/: __init__.py
katacombs-api/tests/domain/player/: __init__.py  test_player_unit.py
katacombs-api/tests/e2e/: test_start_game_e2e.py
katacombs-api/tests/game/application/use_cases/: __init__.py  test_start_game_acceptance.py  test_start_game_e2e.py  test_start_game_e2e_business_flow.py  test_start_game_unit.py
katacombs-api/tests/game/domain/player/: test_player_unit.py
katacombs-api/tests/game/domain/world/: __init__.py  test_item_unit.py  test_location_unit.py  test_world_builder_unit.py  test_world_unit.py
katacombs-api/tests/game/infrastructure/: __init__.py
katacombs-api/tests/game/infrastructure/adapters/: __init__.py  test_game_controller_contract.py
katacombs-api/tests/game/infrastructure/repositories/: test_player_repository_integration.py  test_world_repository_integration.py
katacombs-api/tests/infrastructure/repositories/: __init__.py  test_player_repository_integration.py
katacombs-api/tests/integration/: test_location_repository.py  test_player_repository.py
katacombs-api/tests/unit/: test_player.py  test_start_game_use_case.py
katacombs-api2/: .gitignore  ARCHITECTURE_PLAN.md  Makefile  README.md  USER_STORIES.md  pyproject.toml  pyrightconfig.json
katacombs-api2/src/katacombs_api/: __init__.py
katacombs-api2/tests/: test_basic.py  test_start_game_acceptance.py
